--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,52 @@
 body{
     color: tomato;
 }
+
+main {
+    display: grid;
+    grid-template-columns: 5% 1fr 1fr 1fr 5%;
+    grid-auto-rows: 200px;
+}
+
+aside {
+    grid-column: 2/3;
+    grid-row: 2;
+}
+
+header {
+    grid-row: 1;
+}
+
+footer {
+    grid-column: 2/5;
+    grid-row: 6;
+}
+
+.container {
+    display:grid;
+    grid-column: 3/5;
+    grid-row: 2;
+    grid-gap:5px;
+    grid-template-columns: repeat(auto-fit, minmax(300px,1fr));
+    grid-auto-rows:200px;
+    grid-auto-flow:dense;
+  }
+  
+  img{
+    width:100%;
+    height:100%;
+    object-fit:cover;
+  }
+  
+  .horizontal{
+    grid-column: span 2;
+  }
+  
+  .vertical{
+    grid-row: span 2;
+  }
+  
+  .big{
+    grid-column:span 2;
+    grid-row:span 2;
+  }
